Fix overflow issues.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -515,35 +515,40 @@ p {
 
 @media screen and (max-width: 800px) {
 
- html, body {
-   overflow-x: hidden;
- }
- body {
-   position: relative
- }
+  html, body {
+   overflow: auto;
+  }
 
- .nav-links {
-   display: none;
-   flex-direction: column;
-   width: 100%;
-   margin-left : 1rem;
- }
+  body {
+    position: relative
+  }
 
- .nav-links li a {
-   font-size: 1rem;
- }
+  .nav-links {
+    display: none;
+    flex-direction: column;
+    width: 100%;
+    margin-left : 1rem;
+  }
 
- .nav-links.show {
-   display: flex;
- }
+  .nav-links li a {
+    font-size: 1rem;
+  }
+
+  .nav-links.show {
+    display: flex;
+  }
  
- .hamburger {
-   display: block;
- }
+  .hamburger {
+    display: block;
+  }
 
- .notifications-count {
-   bottom: 1.5rem;
-   left: 1rem;
- }
+  .notifications-count {
+    bottom: 1.5rem;
+    left: 1rem;
+  }
+
+  .button {
+    padding: 2px 6px;
+  }
 
 }
